[package]
name = "agent-consistency-runtime"
version = "0.1.0"
edition = "2021"
description = "Agent-consistency runtime with three concurrency-control strategies and Verus-verified detectors"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
vstd = "0.0.0-2026-05-31-0205"

[dev-dependencies]
