[package]
name = "l2-live"
version = "0.1.0"
edition = "2024"
description = "Live-agent driver for the verified L2 causal-tracking runtime (drives the real L2CausalStore under real LLM agents and measures A3 prevention)"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "l2_live"
path = "src/main.rs"